--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,48 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <title>Alik</title>
-  <%= stylesheet_link_tag    "application", :media => "all" %>
-  <%= javascript_include_tag "application" %>
-  <%= csrf_meta_tags %>
-</head>
-<body>
+<html lang="<%= I18n.locale %>">
+  <head>
+    <meta charset="UTF-8">
+    <title>Alik | <%= content_for?(:title) ? yield(:title) : "Alik " %></title>
 
-<%= yield %>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <%= yield(:header_tags) %>
 
-</body>
+    <%= stylesheet_link_tag "http://fonts.googleapis.com/css?family=Imprima" %>
+    <%= stylesheet_link_tag "application" %>
+    <%= javascript_include_tag "application" %>
+    <%= csrf_meta_tags %>
+    <%= favicon %>
+
+    <!--[if lt IE 9]>
+      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+  </head>
+
+  <body id="<%= controller.controller_name %>">
+
+    <div id="wrap">
+      <%= render("shared/header") %>
+      <div id="container" class="has_sidebar">
+        <% if content_for?(:container_title) %>
+          <div id='container-title'>
+            <%= yield(:container_title) %>
+          </div>
+        <% end %>
+
+        <aside>
+          <%= yield(:sidebar) %>
+        </aside>
+
+        <section role="main">
+          <%= yield %>
+        </section>
+      </div>
+      <%= render("shared/footer") %>
+    </div>
+
+    <%= analytics "UA-32025057-1" %>
+  </body>
 </html>
+
