--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -11,7 +11,7 @@
 <h2><%= t(".container_title") %></h2>
 
 <ul id='questions'>
-  <% 10.times do %>
+  <% @questions.each do |question| %>
     <li>
       <div class='answers'>
         <div class='count'>
@@ -24,12 +24,15 @@
         <strong>duarte</strong>
         perguntou:
       </p>
-      <h3><a href="/">enganado na compra de um terreno pelo advogado</a></h3>
+      <h3><%= question.title %></h3>
       <p class='sent-at'>Enviada em: 11/06/2012, 17:37h</p>
     </li>
   <% end %>
 </ul>
 
+<div class="digg_pagination">
+  <%= will_paginate @questions %>
+</div>
 
 <!-- Messages
 <p class="alert">
@@ -43,4 +46,4 @@
 <p class="notice">
   nenhuma pergunta encontrada
 </p>
-<!-- -->
+-->
