--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -21,11 +21,11 @@
         <a class='lawyer' href='/'><img alt="" height="16" src="http://graph.facebook.com/100003922746457/picture?type=square" width="16" />Roberto</a>
       </div>
       <p class='requester'>
-        <strong>duarte</strong>
+        <strong>Carlos Eduardo</strong>
         perguntou:
       </p>
       <h3><%= question.title %></h3>
-      <p class='sent-at'>Enviada em: 11/06/2012, 17:37h</p>
+      <p class='sent-at'><%= t("questions.published_at", :time => l(question.created_at, :format => :short)) %></p>
     </li>
   <% end %>
 </ul>
