--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -6,5 +6,48 @@
     </div>
   </div>
   <div id='logo'><a href="http://0.0.0.0:4000/">Alik</a></div>
+  <nav class="navigation">
+    <ul>
+      <li><%= link_to "Home", root_path %></li>
+      <li><%= link_to "Quem Somos", about_path %></li>
+      <li><%= link_to "Contato", nil %></li>
+    </ul>
+  </nav>
 </header>
 <hr>
+<style>
+.navigation{
+  font-size: 14px;
+  padding:0px;
+  margin:17px 0 0 15px;
+  float: left;
+  list-style:none;
+  -moz-box-shadow: 0 0 10px #CCC;
+  -webkit-box-shadow: 0 0 10px #CCC;
+  -ms-box-shadow: 0 0 10px #CCC;
+  -o-box-shadow: 0 0 10px #CCC;
+  box-shadow: 0 0 10px #CCC;
+  -webkit-border-top-left-radius: 4px;
+  -webkit-border-top-right-radius: 4px;
+  -moz-border-radius-topleft: 4px;
+  -moz-border-radius-topright: 4px;
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
+
+}
+.navigation ul li { margin: 0 5px; padding: 5px 0 5px 2px; float: left; position: relative; list-style: none;}
+.navigation ul li a {
+    text-decoration: none; display: block; padding:  8px 15px; margin: 0; border-radius: 5px; -webkit-border-radius: 5px; -moz-border-radius: 5px; -webkit-transition: all .3s linear;
+    	
+}
+.navigation ul li a:hover {
+  background: -moz-linear-gradient(top, #FAFAFA 0%, #EFEFEF 100%);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #FAFAFA), color-stop(100%, #EFEFEF));
+  background: -webkit-linear-gradient(top, #FAFAFA 0%, #EFEFEF 100%);
+  background: -o-linear-gradient(top, #FAFAFA 0%, #EFEFEF 100%);
+  background: -ms-linear-gradient(top, #FAFAFA 0%, #EFEFEF 100%);
+  background: linear-gradient(top, #FAFAFA 0%, #EFEFEF 100%);
+  color: #666;
+   
+}
+</style>
