Add Button styles Twitter Bootstrap

--- a/app/assets/stylesheets/pagination.css
+++ b/app/assets/stylesheets/pagination.css
@@ -13,9 +13,9 @@
   .digg_pagination .current {
     font-style: normal;
     font-weight: bold;
-    background: #073E5B;
+    background: #6792AB;
     color: white;
-    border: 1px solid #2e6ab1; }
+    border: 1px solid #6792AB; }
   .digg_pagination a {
     text-decoration: none;
     color: #073E5B;
