--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -5,7 +5,28 @@
 <% end %>
 
 <% content_for :sidebar do %>
-
+<h2>Destaques</h2>
+ <div id="profile">
+   <img alt="" src="http://graph.facebook.com/100001994980755/picture?type=square" width="50" class="avatar" /> <span class="name">Daniel Feio</span>
+   <dl>
+     <dt><span>Carteira OAB:</span> 14.446</dt>
+     <dt><span>Cidade:</span> Belem-Pa</dt>
+     <dt><span>Telefone:</span> 91 81177947</dt>
+     <dt><span>E-mail:</span> dfeio@hotmail.com</dt>
+     <dt><span>Índice:</span> 5,3 - Muito Bom</dt>
+   </dl>
+ </div>
+ 
+ <div id="profile">
+    <img alt="" src="http://graph.facebook.com/100001994980755/picture?type=square" width="50" class="avatar" /> <span class="name">Daniel Feio</span>
+    <dl>
+      <dt><span>Carteira OAB:</span> 14.446</dt>
+      <dt><span>Cidade:</span> Belem-Pa</dt>
+      <dt><span>Telefone:</span> 91 81177947</dt>
+      <dt><span>E-mail:</span> dfeio@hotmail.com</dt>
+      <dt><span>Índice:</span> 5,3 - Muito Bom</dt>
+    </dl>
+  </div>
 <% end %>
 
 <h2><%= t(".container_title") %></h2>
@@ -47,3 +68,19 @@
   nenhuma pergunta encontrada
 </p>
 -->
+
+<style>
+section.profile img{
+  border: 1px solid #CCC;
+  padding: 1px;
+  background-color: white;
+}
+span.name{
+  font-size: 20px;
+  padding-top: 2px;
+  position: relative;
+  bottom: 20px;
+  padding-left: 10px;
+}
+</style>
+
