--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,7 +1,7 @@
 <h1>Contact#new</h1>
 <p>Find me in app/views/contact/new.html.erb</p>
-<%= form_for @contact do |f| %>
-  <%= f.text_field :name %>
-  <%= f.text_field :email %>
-  <%= f.submit %>
+<%= simple_form_for @contact do |f| %>
+  <%= f.input :name %>
+  <%= f.input :email %>
+  <%= f.button :submit %>
 <% end %>
