--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -105,7 +105,7 @@ h1 {
 }
 
 h2 {
-  margin: 1em 0 .5em;
+  margin: 1em 0 1.5em;
   font-size: 1.6em;
   color: $ever-blue;
   font-family: 'Imprima', Helvetica, arial, sans-serif;
@@ -205,6 +205,7 @@ header {
 /* SECTION */
 
 section[role="main"] {
+  height: 707px;
   padding: 0 20px;
 
   ul#questions {
@@ -597,7 +598,7 @@ section[role="main"] {
 }
 
 /* MESSAGES */
-
+/*
 .alert,
 .notice,
 .error {
@@ -656,7 +657,7 @@ section[role="main"] {
 .edit_order #error_explanation {
   width: 505px;
 }
-
+*/
 /* FORMS */
 
 form {
@@ -739,6 +740,7 @@ form {
     color: #f99;
   }
 
+/*
   input[type="submit"],
   button,
   .button {
@@ -770,7 +772,7 @@ form {
     padding: 6px 8px;
     font-size: 1.2em;
   }
-
+/*
   input[type="submit"]:hover,
   button:hover,
   .button:hover {
@@ -796,7 +798,7 @@ form {
     -moz-box-shadow: inset 0 0 8px 4px #548c29, 0 1px 0 0 #eeeeee;
     box-shadow: inset 0 0 8px 4px #548c29, 0 1px 0 0 #eeeeee;
   }
-
+*/
   #options {
     height: 80px;
 
