--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -10,7 +10,9 @@
     <ul>
       <li><%= link_to "Home", root_path %></li>
       <li><%= link_to "Quem Somos", about_path %></li>
+      <li><%= link_to "Blog", nil %></li>
       <li><%= link_to "Contato", new_contact_path %></li>
+      <li><%= link_to "Login", nil %></li>
     </ul>
   </nav>
 </header>
