--- a/app/assets/stylesheets/simple_form.css
+++ b/app/assets/stylesheets/simple_form.css
@@ -1,3 +1,26 @@
+/**
+ * SEARCH
+ */
+.home-search {
+  margin-left: 20px;
+}
+
+.home-search input[type=text] {
+	font-size: 1.8em;
+	padding: 10px 6px;
+	width: 750px;
+}
+
+.home-search p{
+	text-indent:50px;
+}
+
+.search input[type=search] {
+	padding:10px;
+  width: 180px;
+  font-size: 16px;
+}
+
 /* ----- SimpleForm Styles ----- */
 
 .simple_form div.input {
