--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -2,9 +2,18 @@
 
 <% content_for :container_title do %>
   <h1>Assessoria jurídica gratuita</h1>
+  <%= form_tag root_path, :method => :get, :class => "home-search" do %>
+    <%= text_field_tag :query, params[:query] %>
+    <%= submit_tag t("form.buttons.search"), :class => "btn btn-big btn-success" %>
+  <% end %>
+  <ul class="buttons-home">
+    <li><%= link_to "Fazer pergunta", nil, :class => "btn btn-large" %></li>
+    <li><%= link_to "Procurar um advogado", nil, :class => "btn btn-large" %></li>
+  </ul>
 <% end %>
 
 <% content_for :sidebar do %>
+
 <h2>Destaques</h2>
  <div id="profile">
    <img alt="" src="http://graph.facebook.com/100001994980755/picture?type=square" width="50" class="avatar" /> <span class="name">Daniel Feio</span>
@@ -70,6 +79,15 @@
 -->
 
 <style>
+ul.buttons-home{
+  width: 100%;
+  height: 50px;
+  margin-left:8px;
+}
+ul.buttons-home li{
+  float:left;
+  margin-left: 10px;
+}
 section.profile img{
   border: 1px solid #CCC;
   padding: 1px;
