--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -2,7 +2,7 @@
 
 <% content_for :container_title do %>
   <h1>Assessoria jurídica gratuita</h1>
-  <%= form_tag root_path, :method => :get, :class => "home-search" do %>
+  <%= form_tag search_questions_path, :method => :get, :class => "home-search" do %>
     <%= text_field_tag :query, params[:query] %>
     <%= submit_tag t("form.buttons.search"), :class => "btn btn-big btn-success" %>
   <% end %>
