--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,104 +1,17 @@
 <% title t(".title") %>
 
-<% content_for :container_title do %>
-  <h1>Assessoria jurídica gratuita</h1>
-  <%= form_tag search_questions_path, :method => :get, :class => "home-search" do %>
-    <%= text_field_tag :query, params[:query] %>
-    <%= submit_tag t("form.buttons.search"), :class => "btn btn-big btn-success" %>
-  <% end %>
-  <ul class="buttons-home">
-    <li><%= link_to "Fazer pergunta", nil, :class => "btn btn-large" %></li>
-    <li><%= link_to "Procurar um advogado", nil, :class => "btn btn-large" %></li>
-  </ul>
-<% end %>
-
 <% content_for :sidebar do %>
-
-<h2>Destaques</h2>
- <div id="profile">
-   <img alt="" src="http://graph.facebook.com/100001994980755/picture?type=square" width="50" class="avatar" /> <span class="name">Daniel Feio</span>
-   <dl>
-     <dt><span>Carteira OAB:</span> 14.446</dt>
-     <dt><span>Cidade:</span> Belem-Pa</dt>
-     <dt><span>Telefone:</span> 91 81177947</dt>
-     <dt><span>E-mail:</span> dfeio@hotmail.com</dt>
-     <dt><span>Índice:</span> 5,3 - Muito Bom</dt>
-   </dl>
- </div>
-
- <div id="profile">
-    <img alt="" src="http://graph.facebook.com/100001994980755/picture?type=square" width="50" class="avatar" /> <span class="name">Daniel Feio</span>
-    <dl>
-      <dt><span>Carteira OAB:</span> 14.446</dt>
-      <dt><span>Cidade:</span> Belem-Pa</dt>
-      <dt><span>Telefone:</span> 91 81177947</dt>
-      <dt><span>E-mail:</span> dfeio@hotmail.com</dt>
-      <dt><span>Índice:</span> 5,3 - Muito Bom</dt>
-    </dl>
-  </div>
+  <%= render("shared/sidebar") %>
 <% end %>
 
-<h2><%= t(".container_title") %></h2>
+<h1><%= t(".container_title") %></h1>
 
 <ul id='questions'>
   <% @questions.each do |question| %>
-    <li>
-      <div class='answers'>
-        <div class='count'>
-          <span>1</span>
-          resposta
-        </div>
-        <a class='lawyer' href='/'><img alt="" height="16" src="http://graph.facebook.com/100003922746457/picture?type=square" width="16" />Roberto</a>
-      </div>
-      <p class='requester'>
-        <strong>Carlos Eduardo</strong>
-        perguntou:
-      </p>
-      <h3><%= question.title %></h3>
-      <p class='sent-at'><%= t("questions.published_at", :time => l(question.created_at, :format => :short)) %></p>
-    </li>
+    <%= render question %>
   <% end %>
 </ul>
 
 <div class="digg_pagination">
   <%= will_paginate @questions %>
 </div>
-
-<!-- Messages
-<p class="alert">
-  nenhuma pergunta encontrada
-</p>
-
-<p class="error">
-  nenhuma pergunta encontrada
-</p>
-
-<p class="notice">
-  nenhuma pergunta encontrada
-</p>
--->
-
-<style>
-ul.buttons-home{
-  width: 100%;
-  height: 50px;
-  margin-left:8px;
-}
-ul.buttons-home li{
-  float:left;
-  margin-left: 10px;
-}
-section.profile img{
-  border: 1px solid #CCC;
-  padding: 1px;
-  background-color: white;
-}
-span.name{
-  font-size: 20px;
-  padding-top: 2px;
-  position: relative;
-  bottom: 20px;
-  padding-left: 10px;
-}
-</style>
-
