--- a/app/views/questions/search.html.erb
+++ b/app/views/questions/search.html.erb
@@ -1,25 +1,14 @@
-<h1>Sua busca</h1>
+<% title t(".title") %>
+
+<h1><%= t(".container_title") %></h1>
 <p>
   Sua busca por <strong><%= params[:query].inspect %></strong>
   retornou os seguintes resultados:
 </p>
+
 <ul id='questions'>
   <% @questions.each do |question| %>
-    <li>
-      <div class='answers'>
-        <div class='count'>
-          <span>1</span>
-          resposta
-        </div>
-        <a class='lawyer' href='/'><img alt="" height="16" src="http://graph.facebook.com/100003922746457/picture?type=square" width="16" />Roberto</a>
-      </div>
-      <p class='requester'>
-        <strong>Carlos Eduardo</strong>
-        perguntou:
-      </p>
-      <h3><%= question.title %></h3>
-      <p class='sent-at'><%= t("questions.published_at", :time => l(question.created_at, :format => :short)) %></p>
-    </li>
+    <%= render question %>
   <% end %>
 </ul>
 
@@ -30,3 +19,7 @@
 <div class="digg_pagination">
   <%= will_paginate @questions %>
 </div>
+
+<% content_for :sidebar do %>
+  <%= render("shared/sidebar") %>
+<% end %>
