--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,9 +1,9 @@
 /*
  *= require_self
+ *= require bootstrap_and_overrides
  *= require reset
  *= require style
  *= require pagination
- *= require buttons
  *= require profile
  *= require simple_form
  */
@@ -58,6 +58,7 @@ ul.buttons-home{
   width: 100%;
   height: 50px;
   margin-left:8px;
+	margin-top:10px;
 }
 ul.buttons-home li{
   float:left;
