--- a/app/assets/stylesheets/pagination.css
+++ b/app/assets/stylesheets/pagination.css
@@ -17,6 +17,7 @@
     color: white;
     border: 1px solid #6792AB; }
   .digg_pagination a {
+		line-height: 15px;
     text-decoration: none;
     color: #073E5B;
     border: 1px solid #6792AB; }
