--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -5,7 +5,7 @@
 <% end %>
 
 <h1><%= t(".container_title") %></h1>
-
+  <div id="modal_form_container"></div>
 <ul id='questions'>
   <% @questions.each do |question| %>
     <%= render question %>
@@ -15,3 +15,4 @@
 <div class="digg_pagination">
   <%= will_paginate @questions %>
 </div>
+
