--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -2,12 +2,16 @@
 
 <h2><%= t(".container_title") %></h2>
 
-<%= simple_form_for @contact do |f| %>
+<%= simple_form_for @contact, :html => { :class => 'form-horizontal' } do |f| %>
   <%= f.error_notification %>
-  <%= f.input :name %>
-  <%= f.input :email %>
-  <%= f.input :message, :as => :text %>
-  <%= f.button :submit, :class => "btn btn-success" %>
+  <%= f.input :name, input_html: {:class => "span4"} %>
+  <%= f.input :email, input_html: {:class => "span4"} %>
+  <%= f.input :message, :as => :text, input_html: {:class => "span4"} %>
+  
+  <div class="form-actions">
+    <%= f.button :submit, :class => "btn btn-primary" %>
+    <%= link_to "Cancelar", root_path, :class => "btn"%>
+  </div>
 <% end %>
 
 <% content_for :sidebar do %>
