--- a/app/views/shared/_main_header.html.erb
+++ b/app/views/shared/_main_header.html.erb
@@ -9,32 +9,23 @@
 </ul>
 
 
-<div class="modal fade" id="new_question">
+<div class="modal hide fade" id="new_question">
   <div class="modal-header">
     <button type="button" class="close" data-dismiss="modal">X</button>
-    <h3>Criar uma nova pergunta</h3>
+    <h1>Criar uma nova pergunta</h1>
   </div>
-  
     <%= simple_form_for Question.new, :html => { :class => 'form-horizontal' } do |f| %>
-      
-        <%= f.input :title %>
-        <%= f.input :requester_name%>
-        <%= f.input :requester_email %>
-        <%= f.input :requester_phone_area_code %>
-        <%= f.input :requester_phone_number %>
-        <%= f.input :description, :as => :text %>
+        <%= f.input :title, input_html: {:class => "span3"}  %>
+        <%= f.input :requester_name, input_html: {:class => "span3"}%>
+        <%= f.input :requester_email, input_html: {:class => "span3"} %>
+        <%= f.input :requester_phone, :as => :string, input_html: {:class => "span3"} %>
+        <%= f.input :city_name, input_html: {data: {autocomplete_source: City.order(:name).map(&:name)}, :class => "span3"} %>
+        <%= f.input :description, :as => :text, input_html: {:class => "span3"} %>
       
       <div class="form-actions">
-        <%= f.button :submit, :class => "btn btn-primary" %>
-        <a href="#" class="btn" data-dismiss="modal">Cancelar</a>
+        <%= f.button :submit,  :class => "btn btn-primary" %>
+        <%= link_to "Cancelar", "#", :class => "btn", :"data-dismiss" => "modal"%>
       </div>
     <% end %>
   
 </div>
-
-<style>
-#new_question{
-  width: 800px;
-  
-}
-</style>
