--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,6 +1,6 @@
 <% title t(".title") %>
 
-<h2><%= t(".container_title") %></h2>
+<h1 class="contato"><%= t(".container_title") %></h1>
 
 <%= simple_form_for @contact, :html => { :class => 'form-horizontal' } do |f| %>
   <%= f.error_notification %>
