--- a/app/views/shared/_main_header.html.erb
+++ b/app/views/shared/_main_header.html.erb
@@ -19,7 +19,15 @@
         <%= f.input :requester_name, input_html: {:class => "span3"}%>
         <%= f.input :requester_email, input_html: {:class => "span3"} %>
         <%= f.input :requester_phone, :as => :string, input_html: {:class => "span3"} %>
-        <%= f.input :city_name, input_html: {data: {autocomplete_source: City.order(:name).map(&:name)}, :class => "span3"} %>
+        
+        <%= f.input :state_id do %>
+          <%= f.collection_select :state_id, State.order(:name), :id, :name, include_blank: true %>
+        <% end %>
+        
+        <%= f.input :city_id do %>
+          <%= f.grouped_collection_select :city_id, State.order(:name), :cities, :name, :id, :name, include_blank: true %>
+        <% end %>
+        
         <%= f.input :description, :as => :text, input_html: {:class => "span3"} %>
       
       <div class="form-actions">
