--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -141,3 +141,27 @@ footer p{
   width: 180px;
   font-size: 16px;
 }
+.image-profile{
+	width: 36px;
+	height:36px;
+}
+
+.lawyer{
+  display: block;
+  margin: 4px 0 4px 4px;
+  padding: 3px 6px;
+  border: 1px solid #CCC;
+  font-size: .9em;
+  float: right;
+  -moz-border-radius: 4px;
+  -webkit-border-radius: 4px;
+  border-radius: 4px;
+  background: #EFEFEF;
+  background: -moz-linear-gradient(top, #FAFAFA 0%, #EFEFEF 100%);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #FAFAFA), color-stop(100%, #EFEFEF));
+  background: -webkit-linear-gradient(top, #FAFAFA 0%, #EFEFEF 100%);
+  background: -o-linear-gradient(top, #FAFAFA 0%, #EFEFEF 100%);
+  background: -ms-linear-gradient(top, #FAFAFA 0%, #EFEFEF 100%);
+  background: linear-gradient(top, #FAFAFA 0%, #EFEFEF 100%);
+
+}
