--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,38 +1,34 @@
-<h1 class="devise">Efetue o seu cadastro</h1>
+<h1 class="devise"><%= t(".title") %></h1>
 
-<%= simple_form_for(resource, :as => resource_name, :url => session_path(resource_name), :html => {:class => 'form-horizontal' }) do |f| %>
-<%= f.error_notification %>
+<%= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name), html: { class: "form-horizontal" }) do |f| %>
 
-<div class="tabbable"> <!-- Only required for left/right tabs -->
+<div class="tabbable">
   <ul class="nav nav-tabs">
     <li class="active"><%= link_to "Informações de Segurança", "#tab1", :"data-toggle" => "tab"%></li>
     <li><%= link_to "Informações Pessoais", "#tab2", :"data-toggle" => "tab"%></li>
     <li><%= link_to "Informações Acadêmicas", "#tab3", :"data-toggle" => "tab"%></li>
-
   </ul>
+
   <div class="tab-content">
     <div class="tab-pane active" id="tab1">
       <fieldset>
         <legend>Informações de Segurança</legend>
-        <%= f.input :username,					:required => true ,:autofocus => true, input_html: {:class => "span3"}%>
-        <%= f.input :email, 					  :required => true, input_html: {:class => "span3"} %>
-        <%= f.input :password,					:required => true, input_html: {:class => "span3"} %>
-        <%= f.input :password_confirmation,		:required => true, input_html: {:class => "span3"} %>
+        <%= f.input :username %>
+        <%= f.input :email %>
+        <%= f.input :password %>
+        <%= f.input :password_confirmation %>
       </fieldset>
-    </div>
+    </div><!-- tab1 -->
 
     <div class="tab-pane" id="tab2">
       <fieldset>
         <legend>Informações Pessoais</legend>
-        
         <%= f.input :state_id do %>
           <%= f.collection_select :state_id, State.order(:name), :id, :name, include_blank: true %>
         <% end %>
-        
         <%= f.input :city_id do %>
           <%= f.grouped_collection_select :city_id, State.order(:name), :cities, :name, :id, :name, include_blank: true %>
         <% end %>
-        
         <%= f.input :avatar_url, input_html: {:class => "span3"} %>
         <%= f.input :phone, :as => :string, input_html: {:class => "span3"} %>
         <%= f.input :teaching,            :collection => 1..5%>
@@ -40,7 +36,7 @@
         <%= f.input :books_published,     :collection => 1..5 %>
         <%= f.input :articles_published,  :collection => 1..5 %>
       </fieldset>
-    </div>
+    </div><!-- tab2 -->
 
     <div class="tab-pane" id="tab3">
       <fieldset>
@@ -48,17 +44,19 @@
         <%= f.input :postgraduate,        :as => :boolean %>
         <%= f.input :doctorate_in_law,    :as => :boolean %>
         <%= f.input :master_of_law,       :as => :boolean %>
-
         <%= f.input :postgraduate_in_law, :as => :boolean %>
         <%= f.input :foreign_laguage,     :as => :boolean%>
         <%= f.input :terms_of_use,        :as => :boolean %>
       </fieldset>
-    </div>
+    </div><!-- tab3 -->
+
   </div>
 </div>
 
 <div class="form-actions">
-  <%= f.button :submit, "Registrar", :class => "btn-large btn-primary" %>
+  <%= f.button :submit, t(".submit"), class: "btn btn-primary" %>
+  <%= link_to "Cancelar", root_path, :class => "btn"%>
 </div>
 <% end %>
-<%= render :partial => "devise/shared/links" %>
+
+<%= render "devise/shared/links" %>
