--- a/app/views/answers/_form.html.erb
+++ b/app/views/answers/_form.html.erb
@@ -1,5 +1,8 @@
+<% title t(".title") %>
 <%= simple_form_for [@question, @answer], html: { class: "form-horizontal" } do |f| %>
-  <%= f.input :description %>
+  <%= f.input :description, input_html: {class: "span4"} %>
   
-  <%= f.button :submit%>
+  <div class="form-actions">
+    <%= f.button :submit, :class => "btn btn-primary" %>
+  </div>
 <% end %>
