--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -4,13 +4,13 @@
 
 <%= simple_form_for @contact, :html => { :class => 'form-horizontal' } do |f| %>
   <%= f.error_notification %>
-  <%= f.input :name, input_html: {:class => "span4"} %>
-  <%= f.input :email, input_html: {:class => "span4"} %>
+  <%= f.input :name,  hint: t("activerecord.required"), input_html: {:class => "span4"} %>
+  <%= f.input :email, hint: t("activerecord.required"), input_html: {:class => "span4"} %>
   <%= f.input :message, :as => :text, input_html: {:class => "span4"} %>
   
   <div class="form-actions">
     <%= f.button :submit, :class => "btn btn-primary" %>
-    <%= link_to "Cancelar", root_path, :class => "btn"%>
+    <%= link_to t("general.cancel"), root_path, :class => "btn"%>
   </div>
 <% end %>
 
