--- a/app/views/questions/_question.html.erb
+++ b/app/views/questions/_question.html.erb
@@ -11,7 +11,7 @@
     
     <% question.answers.each do |answer|%>
     <div class="lawyer">
-      <%= link_to image_tag avatar_url(answer.user, 18) %>
+      <%= link_to image_tag avatar_url(answer.user, 18), :class =>"avatar-question" %>
       <%= answer.user.username %>
     </div>
     <% end %>
