Add Resposta Box

--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -16,4 +16,54 @@
   <% end %>
 </div>
 
-<%= render "answers/form" %>
+<div id="answers">
+  <%= render @question.answers %>
+</div>
+
+<% if user_signed_in? %>
+  <%= render "answers/form" %>
+<% end %>
+
+<style type="text/css" media="screen">
+  #answers{
+  padding: 10px 20px 0;
+  margin-bottom:50px;
+  background-color: #F1F5F8;
+}
+  .answers{
+  padding: 10px 20px 0;
+  border-bottom: 1px dotted #B8D0DE;
+}
+  span.no-rated{
+    font-style: italic;
+    color: red;
+    float:right;
+  }
+.when{
+  font-size: .9em;
+  color: #999;
+  margin: .5em 0;
+}
+.answer-profile{
+  width: 30%;
+  margin: 4px 0 4px 0;
+  padding: 3px 6px;
+  border: 1px solid #CCC;
+  font-size: 1.0em;
+  -moz-border-radius: 4px;
+  -webkit-border-radius: 4px;
+  border-radius: 4px;
+  background: #EFEFEF;
+  background: -moz-linear-gradient(top, #FAFAFA 0%, #EFEFEF 100%);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #FAFAFA), color-stop(100%, #EFEFEF));
+  background: -webkit-linear-gradient(top, #FAFAFA 0%, #EFEFEF 100%);
+  background: -o-linear-gradient(top, #FAFAFA 0%, #EFEFEF 100%);
+  background: -ms-linear-gradient(top, #FAFAFA 0%, #EFEFEF 100%);
+  background: linear-gradient(top, #FAFAFA 0%, #EFEFEF 100%);
+
+}
+.answer-avatar{
+  height: 38px;
+  width: 38px;
+}
+</style>
