--- a/app/views/answers/_form.html.erb
+++ b/app/views/answers/_form.html.erb
@@ -1,6 +1,6 @@
 <% title t(".title") %>
 <%= simple_form_for [@question, @answer], html: { class: "form-horizontal" } do |f| %>
-  <%= f.input :description, input_html: {class: "span4"} %>
+  <%= f.input :description, input_html: {class: "span4"}, :hint => "Responda essa pergunta, e deixe a sua resposta ser avaliada.", :placeholder => "Sua Resposta"%>
   
   <div class="form-actions">
     <%= f.button :submit, :class => "btn btn-primary" %>
