--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,23 +1,67 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<h1 class="devise"><%= t(".title") %></h1>
 
-<%= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f| %>
-  <%= f.error_notification %>
 
-  <div class="inputs">
-    <%= f.input :email, :required => true, :autofocus => true %>
-    <%= f.input :username %>
-    <%= f.input :password, :autocomplete => "off", :hint => "leave it blank if you don't want to change it", :required => false %>
-    <%= f.input :password_confirmation, :required => false %>
-    <%= f.input :current_password, :hint => "we need your current password to confirm your changes", :required => true %>
+<%=render "shared/score" %>
+
+<%= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name), html: { class: "form-horizontal" }) do |f| %>
+
+<div class="tabbable">
+  <ul class="nav nav-tabs">
+    <li class="active"><%= link_to "Informações de Segurança", "#tab1", :"data-toggle" => "tab"%></li>
+    <li><%= link_to "Informações Profissionais", "#tab2", :"data-toggle" => "tab"%></li>
+    <li><%= link_to "Informações Acadêmicas", "#tab3", :"data-toggle" => "tab"%></li>
+  </ul>
+
+  <div class="tab-content">
+    <div class="tab-pane active" id="tab1">
+      <fieldset>
+        <legend>Informações de Segurança</legend>
+        <%= f.input :username %>
+        <%= f.input :email %>
+        <%= f.input :password %>
+        <%= f.input :password_confirmation %>
+        <%= f.input :about, input_html: {class: "span4"} %>
+      </fieldset>
+    </div><!-- tab1 -->
+
+    <div class="tab-pane" id="tab2">
+      <fieldset>
+        <legend>Informações Profissionais</legend>
+        <%= f.input :state_id do %>
+          <%= f.collection_select :state_id, State.order(:name), :id, :name, include_blank: true %>
+        <% end %>
+        <%= f.input :city_id do %>
+          <%= f.grouped_collection_select :city_id, State.order(:name), :cities, :name, :id, :name, include_blank: true %>
+        <% end %>
+        <%= f.input :avatar_url, input_html: {:class => "span3"} %>
+        <%= f.input :portifolio_of_oab, input_html: {:class => "span3"} %>
+        <%= f.input :fields, input_html: {:class => "span3"} %>
+        <%= f.input :phone, :as => :string, input_html: {:class => "span3"} %>
+        <%= f.input :teaching,            :collection => 1..5%>
+        <%= f.input :professional,        :collection => 1..5%>
+        <%= f.input :books_published,     :collection => 1..5 %>
+        <%= f.input :articles_published,  :collection => 1..5 %>
+      </fieldset>
+    </div><!-- tab2 -->
+
+    <div class="tab-pane" id="tab3">
+      <fieldset>
+        <legend>Informações Acadêmicas e de Experiências</legend>
+        <%= f.input :postgraduate,        :as => :boolean %>
+        <%= f.input :doctorate_in_law,    :as => :boolean %>
+        <%= f.input :master_of_law,       :as => :boolean %>
+        <%= f.input :postgraduate_in_law, :as => :boolean %>
+        <%= f.input :foreign_laguage,     :as => :boolean %>
+      </fieldset>
+    </div><!-- tab3 -->
+
   </div>
+</div>
 
-  <div class="actions">
-    <%= f.button :submit, "Update" %>
-  </div>
+<div class="form-actions">
+  <%= f.button :submit, class: "btn btn-primary" %>
+  <%= link_to "Cancelar", root_path, :class => "btn"%>
+</div>
 <% end %>
 
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), :confirm => "Are you sure?", :method => :delete %>.</p>
-
-<%= link_to "Back", :back %>
+<%= render "devise/shared/links" %>
