--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,8 +1,15 @@
-<p>Hello <%= @resource.email %>!</p>
+<p>Ola <%= @resource.email %>!</p>
 
-<p>Someone has requested a link to change your password, and you can do this through the link below.</p>
+<p>Alguém pediu um link para alterar sua senha, e você pode fazer isso através do link abaixo.
+</p>
 
-<p><%= link_to 'Change my password', edit_password_url(@resource, :reset_password_token => @resource.reset_password_token) %></p>
+<p><%= link_to 'Mudar minha senha', edit_password_url(@resource, :reset_password_token => @resource.reset_password_token) %></p>
 
-<p>If you didn't request this, please ignore this email.</p>
-<p>Your password won't change until you access the link above and create a new one.</p>
+<p>Se você não pediu isso, por favor, ignore este e-mail.</p>
+<p>Sua senha não mudará até que você acessar o link acima e criar uma nova senha.</p>
+
+
+<p>
+	<strong>Equipe Alik</strong><br>
+	<%= link_to "www.alik.com.br", "http://www.alik.com.br/" %>
+</p>
