--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,19 +1,18 @@
-<h2>Change your password</h2>
+<h2><%= t(".title") %></h2>
 
-<%= simple_form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :put }) do |f| %>
-  <%= f.error_notification %>
+<%= form_for(resource, :as => resource_name, :url => password_path(resource_name), html: { method: :put, class: "well" }) do |f| %>
+  <%= devise_error_messages! %>
+  <%= f.hidden_field :reset_password_token %>
 
-  <%= f.input :reset_password_token, :as => :hidden %>
-  <%= f.full_error :reset_password_token %>
+  <%= f.label :password, "New password" %>
+  <%= f.password_field :password %>
 
-  <div class="inputs">
-    <%= f.input :password, :label => "New password", :required => true %>
-    <%= f.input :password_confirmation, :label => "Confirm your new password", :required => true %>
-  </div>
+  <%= f.label :password_confirmation, "Confirm new password" %>
+  <%= f.password_field :password_confirmation %>
 
-  <div class="actions">
-    <%= f.button :submit, "Change my password" %>
+  <div class="controls">
+  <%= f.submit t(".submit"), class: "btn" %>
   </div>
 <% end %>
 
-<%= render :partial => "devise/shared/links" %>
+<%= render "devise/shared/links" %>
