--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,15 +1,14 @@
-<h2>Forgot your password?</h2>
+<h2><%= t(".title") %></h2>
 
-<%= simple_form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post }) do |f| %>
+<%= simple_form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post }, html: { class: "form-horizontal" }) do |f| %>
   <%= f.error_notification %>
 
-  <div class="inputs">
+  
     <%= f.input :email, :required => true %>
-  </div>
 
-  <div class="actions">
-    <%= f.button :submit, "Send me reset password instructions" %>
+  <div class="form-actions">
+    <%= f.submit t(".submit"), class: "btn" %>
   </div>
 <% end %>
 
-<%= render :partial => "devise/shared/links" %>
+<%= render "devise/shared/links" %>
