Add page show and index user

--- a/app/views/shared/_main_header.html.erb
+++ b/app/views/shared/_main_header.html.erb
@@ -5,7 +5,7 @@
 <% end %>
 <ul class="buttons-home">
   <li><%= link_to "Fazer pergunta", "#new_question", "data-toggle" => "modal", :class => "btn btn-large" %></li>
-  <li><%= link_to "Procurar um advogado", nil, :class => "btn btn-large" %></li>
+  <li><%= link_to "Procurar um advogado", users_path, :class => "btn btn-large" %></li>
 </ul>
 
 
