--- a/app/views/questions/_question.html.erb
+++ b/app/views/questions/_question.html.erb
@@ -5,14 +5,14 @@
       <p>Nenhuma resposta</p>
       <% else %>
       <span><%= question.answers_count %></span>
-      <%= t(".answer", count: question.answers_count) %>
+      <%= link_to t(".answer", count: question.answers_count), question %>
       <% end %>
     </div>
     
     <% question.answers.each do |answer|%>
     <div class="lawyer">
-      <%= link_to image_tag avatar_url(answer.user, 18), :class =>"avatar-question" %>
-      <%= answer.user.username %>
+      <%= link_to image_tag(avatar_url(answer.user, 18)), user_path(answer.user), :class =>"avatar-question" %>
+      <%= link_to answer.user.username, user_path(answer.user) %>
     </div>
     <% end %>
 
