--- a/app/views/site/about.html.erb
+++ b/app/views/site/about.html.erb
@@ -4,6 +4,8 @@
    <%= render("shared/sidebar") %>
 <% end %>
 
+<section class="about">
+
 <h1><%= t(".container_title") %></h1>
 
 <p>
@@ -100,8 +102,10 @@ poder aquisitivo. Para se defender é essencial contar com um profissional
 competente, coisa que só um diploma não garante.</p>
 
 <p>Com esse propósito em mente, reunimos nossa equipe e, agregando outros
-profissionais e consultores, passamos a um exaustivo trabalho de análise
-e juntos criamos a CLASSIFICAÇÃO ALIK para auxiliar o consumidor a
-avaliar a atuação dos advogados no Brasil.</p>
+	profissionais e consultores, passamos a um exaustivo trabalho de análise
+	e juntos criamos a CLASSIFICAÇÃO ALIK para auxiliar o consumidor a
+	avaliar a atuação dos advogados no Brasil.
+</p>
 
 <p>Dessa forma nasceu ALIK.</p>
+</section>
