--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -3,193 +3,10 @@
  *= require bootstrap_and_overrides
  *= require reset
  *= require style
+ *= require layout
+ *= require general
+ *= require forms
  *= require pagination
  *= require profile
- */
-h1{ padding: 10px 10px 15px 0}
-h1.contato{margin-bottom:50px}
-h1.devise{margin-bottom:50px}
-#flash_notice, #flash_error, #flash_alert, .alert-error {
-  margin: 10px 0;
-  padding: 10px;
-  text-align: center;
-  color: #333;
-  line-height: 1.4em;
-  font-size: 1.2em;
-  border: 4px solid rgba(0, 0, 0, 0.2);
-  -moz-border-radius: 4px;
-  -webkit-border-radius: 4px;
-border-radius: 4px;}
-
-#flash_notice {
-  background-color: #E4FBD4;
-}
-
-#flash_error, #flash_alert {
-  background-color: #F5E3E3;
-}
-#flash_alert{
-  background-color: #FFFEDF;
-}
-
-.alert-error{
-  background-color: #F5E3E3;
-}
-
-body#site p{
-  margin: 1.4em 0;
-  line-height: 1.4;
-  font-size: 14px;
-  text-align: justify;
-}
-section.profile img{
-  border: 1px solid #CCC;
-  padding: 1px;
-  background-color: white;
-}
-span.name{
-  font-size: 20px;
-  padding-top: 2px;
-  position: relative;
-  bottom: 20px;
-  padding-left: 10px;
-}
-
-ul.buttons-home{
-  width: 100%;
-  height: 50px;
-  margin-left:8px;
-	margin-top:10px;
-}
-ul.buttons-home li{
-  float:left;
-  margin-left: 10px;
-}
-section.profile img{
-  border: 1px solid #CCC;
-  padding: 1px;
-  background-color: white;
-}
-span.name{
-  font-size: 20px;
-  padding-top: 2px;
-  position: relative;
-  bottom: 20px;
-  padding-left: 10px;
-}
-
-.navigation{
-  font-size: 14px;
-  padding:0px;
-  margin:17px 0 0 15px;
-  float: left;
-  list-style:none;
-  -moz-box-shadow: 0 0 10px #CCC;
-  -webkit-box-shadow: 0 0 10px #CCC;
-  -ms-box-shadow: 0 0 10px #CCC;
-  -o-box-shadow: 0 0 10px #CCC;
-  box-shadow: 0 0 10px #CCC;
-  -webkit-border-top-left-radius: 4px;
-  -webkit-border-top-right-radius: 4px;
-  -moz-border-radius-topleft: 4px;
-  -moz-border-radius-topright: 4px;
-  border-top-left-radius: 4px;
-  border-top-right-radius: 4px;
-
-}
-.navigation ul li { margin: 0 5px; padding: 5px 0 5px 2px; float: left; position: relative; list-style: none;}
-.navigation ul li a {
-    text-decoration: none; display: block; padding:  8px 15px; margin: 0; border-radius: 5px; -webkit-border-radius: 5px; -moz-border-radius: 5px; -webkit-transition: all .3s linear;
-
-}
-.navigation ul li a:hover {
-  background: -moz-linear-gradient(top, #FAFAFA 0%, #EFEFEF 100%);
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #FAFAFA), color-stop(100%, #EFEFEF));
-  background: -webkit-linear-gradient(top, #FAFAFA 0%, #EFEFEF 100%);
-  background: -o-linear-gradient(top, #FAFAFA 0%, #EFEFEF 100%);
-  background: -ms-linear-gradient(top, #FAFAFA 0%, #EFEFEF 100%);
-  background: linear-gradient(top, #FAFAFA 0%, #EFEFEF 100%);
-  color: #666;
-
-}
-footer p{
-  margin: 1.4em 0;
-  line-height: 1.4;
-  font-size: 14px;
-  text-align: justify;
-}
-
-/**
- * SEARCH
- */
-.home-search {
-  margin-left: 20px;
-}
-
-.home-search input[type=text] {
-	font-size: 1.4em;
-	padding: 10px 20px;
-	width: 750px;
-}
-
-.home-search p{
-	text-indent:50px;
-}
-
-.search input[type=search] {
-	padding:10px;
-  width: 180px;
-  font-size: 16px;
-}
-.image-profile{
-	width: 36px;
-	height:36px;
-}
-
-.avatar-question{
-	width: 18px;
-	height:18px;
-}
-
-.avatar-question img{
-	width: 18px;
-	height:18px;
-}
-
-.lawyer{
-  display: block;
-  margin: 4px 0 4px 4px;
-  padding: 3px 6px;
-  border: 1px solid #CCC;
-  font-size: .9em;
-  float: right;
-  -moz-border-radius: 4px;
-  -webkit-border-radius: 4px;
-  border-radius: 4px;
-  background: #EFEFEF;
-  background: -moz-linear-gradient(top, #FAFAFA 0%, #EFEFEF 100%);
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #FAFAFA), color-stop(100%, #EFEFEF));
-  background: -webkit-linear-gradient(top, #FAFAFA 0%, #EFEFEF 100%);
-  background: -o-linear-gradient(top, #FAFAFA 0%, #EFEFEF 100%);
-  background: -ms-linear-gradient(top, #FAFAFA 0%, #EFEFEF 100%);
-  background: linear-gradient(top, #FAFAFA 0%, #EFEFEF 100%);
-
-}
-
-span.useful {
-  float:right;
-  padding: 4px 0 4px 20px;
-  color: #000;
-  font-weight: bold;
-  background-image: url("success.png");
-  background-repeat: no-repeat;
-}
-
-span.useless {
-  float:right;
-  padding: 4px 0 4px 20px;
-  color: #000;
-  font-weight: bold;
-  background-image: url("warning.png");
-  background-repeat: no-repeat;
-}
+ *= require question
+*/
