--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -3,10 +3,9 @@
 <h1 class="contato"><%= t(".container_title") %></h1>
 
 <%= simple_form_for @contact, :html => { :class => 'form-horizontal' } do |f| %>
-  <%= f.error_notification %>
-  <%= f.input :name,  hint: t("activerecord.required"), input_html: {:class => "span4"} %>
-  <%= f.input :email, hint: t("activerecord.required"), input_html: {:class => "span4"} %>
-  <%= f.input :message, :as => :text, input_html: {:class => "span4"} %>
+  <%= f.input :name,  input_html: {:class => "span4"} %>
+  <%= f.input :email, input_html: {:class => "span4"} %>
+  <%= f.input :message, :as => :text, input_html: {:class => "span5"} %>
   
   <div class="form-actions">
     <%= f.button :submit, :class => "btn btn-primary" %>
