--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,9 +1,7 @@
-<h1>Detalhes do Usuário</h1>
+<h1>Perfil do usuário - <%= @user.username %></h1>
 
-<%=render "shared/score_public" %>
+<%= render "shared/score_public" %>
 
-<p>
-	<%=image_tag avatar_url(@user,0)%>
-	<%=link_to show_user_helper(@user), user_path(@user.id) %>	
-</p>
-
+<section>
+	<header><%= profile_user @user %></header>
+</section>
