--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,28 +1,26 @@
 <h1 class="devise"><%= t(".title") %></h1>
 
-
 <%=render "shared/score" %>
 
 <%= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name), html: { class: "form-horizontal" }) do |f| %>
-
 <div class="tabbable">
   <ul class="nav nav-tabs">
-    <li class="active"><%= link_to "Informações de Segurança", "#tab1", :"data-toggle" => "tab"%></li>
-    <li><%= link_to "Informações Profissionais", "#tab2", :"data-toggle" => "tab"%></li>
-    <li><%= link_to "Informações Acadêmicas", "#tab3", :"data-toggle" => "tab"%></li>
+    <li class="active"><%= link_to "Segurança", "#tab1", :"data-toggle" => "tab"%></li>
+    <li><%= link_to "Profissional", "#tab2", :"data-toggle" => "tab"%></li>
+    <li><%= link_to "Acadêmico", "#tab3", :"data-toggle" => "tab"%></li>
   </ul>
 
   <div class="tab-content">
     <div class="tab-pane active" id="tab1">
       <fieldset>
         <legend>Informações de Segurança</legend>
-        <%= f.input :username %>
-        <%= f.input :email %>
-        <%= f.input :password %>
-        <%= f.input :password_confirmation %>
-        <%= f.input :about, input_html: {class: "span4"} %>
+        <%= f.input :username, 					input_html: {:class => "span4"} %>
+        <%= f.input :email, 						input_html: {:class => "span4"} %>
+        <%= f.input :password, 					input_html: {:class => "span4"} %>
+        <%= f.input :current_password, 	input_html: {:class => "span4"} %>
+        <%= f.input :about, 						input_html: {:class => "span5"} %>
       </fieldset>
-    </div><!-- tab1 -->
+    </div>
 
     <div class="tab-pane" id="tab2">
       <fieldset>
@@ -33,16 +31,16 @@
         <%= f.input :city_id do %>
           <%= f.grouped_collection_select :city_id, State.order(:name), :cities, :name, :id, :name, include_blank: true %>
         <% end %>
-        <%= f.input :avatar_url, input_html: {:class => "span3"}, :hint => "Use o #{link_to "gravatar", "https://pt.gravatar.com/site/login/"} para obter sua url" %>
-        <%= f.input :portifolio_of_oab, input_html: {:class => "span3"} %>
-        <%= f.input :fields, input_html: {:class => "span3"} %>
-        <%= f.input :phone, :as => :string, input_html: {:class => "span3"} %>
-        <%= f.input :teaching,            :collection => 1..5%>
-        <%= f.input :professional,        :collection => 1..5%>
-        <%= f.input :books_published,     :collection => 1..5 %>
-        <%= f.input :articles_published,  :collection => 1..5 %>
+        <%= f.input :avatar_url, 					input_html: {:class => "span4"}, :hint => "Use o #{link_to "gravatar", "https://pt.gravatar.com/site/login/"} para obter sua url" %>
+        <%= f.input :portifolio_of_oab, 	input_html: {:class => "span4"} %>
+        <%= f.input :fields, 							input_html: {:class => "span4"} %>
+        <%= f.input :phone, 							input_html: {:class => "span4"}, :as => :string  %>
+        <%= f.input :teaching,            :collection => 1..10 %>
+        <%= f.input :professional,        :collection => 1..10 %>
+        <%= f.input :books_published,     :collection => 1..10 %>
+        <%= f.input :articles_published,  :collection => 1..10 %>
       </fieldset>
-    </div><!-- tab2 -->
+    </div>
 
     <div class="tab-pane" id="tab3">
       <fieldset>
@@ -63,5 +61,3 @@
   <%= link_to "Cancelar", root_path, :class => "btn"%>
 </div>
 <% end %>
-
-<%= render "devise/shared/links" %>
