--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -13,11 +13,11 @@
     <div class="tab-pane active" id="tab1">
       <fieldset>
         <legend>Informações de Segurança</legend>
-        <%= f.input :username %>
-        <%= f.input :email %>
-        <%= f.input :password %>
-        <%= f.input :password_confirmation %>
-        <%= f.input :about, input_html: {class: "span4"} %>
+        <%= f.input :username,							input_html: {:class => "span4"} %>
+        <%= f.input :email,									input_html: {:class => "span4"} %>
+        <%= f.input :password,							input_html: {:class => "span4"} %>
+        <%= f.input :password_confirmation, input_html: {:class => "span4"} %>
+        <%= f.input :about, 								input_html: {:class => "span4"} %>
       </fieldset>
     </div><!-- tab1 -->
 
@@ -30,10 +30,10 @@
         <%= f.input :city_id do %>
           <%= f.grouped_collection_select :city_id, State.order(:name), :cities, :name, :id, :name, include_blank: true %>
         <% end %>
-        <%= f.input :avatar_url, input_html: {:class => "span3"}, :hint => "Use o #{link_to "gravatar", "https://pt.gravatar.com/site/login/"} para obter sua url" %>
-        <%= f.input :portifolio_of_oab, input_html: {:class => "span3"} %>
-        <%= f.input :fields, input_html: {:class => "span3"} %>
-        <%= f.input :phone, :as => :string, input_html: {:class => "span3"} %>
+        <%= f.input :avatar_url, 					input_html: {:class => "span4"}, :hint => "Use o #{link_to "gravatar", "https://pt.gravatar.com/site/login/"} para obter sua url" %>
+        <%= f.input :portifolio_of_oab, 	input_html: {:class => "span4"} %>
+        <%= f.input :fields, 							input_html: {:class => "span4"} %>
+        <%= f.input :phone, 							input_html: {:class => "span4"}, :as => :string %>
         <%= f.input :teaching,            :collection => 1..5%>
         <%= f.input :professional,        :collection => 1..5%>
         <%= f.input :books_published,     :collection => 1..5 %>
