--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -1,22 +1,15 @@
 <h2>Destaques</h2>
-<div id="profile">
-  <img alt="" src="http://graph.facebook.com/100001994980755/picture?type=square" width="50" class="avatar" /> <span class="name">Daniel Feio</span>
-  <dl>
-    <dt><span>Carteira OAB:</span> 14.446</dt>
-    <dt><span>Cidade:</span> Belem-Pa</dt>
-    <dt><span>Telefone:</span> 91 81177947</dt>
-    <dt><span>E-mail:</span> dfeio@hotmail.com</dt>
-    <dt><span>Índice:</span> 5,3 - Muito Bom</dt>
-  </dl>
-</div>
+<% User.featured.each do |user| %>
+	<div id="profile">
+		<%= image_tag avatar_url(user, 60), :alt => user.username, :class => "avatar" %> <span class="name"><%= user.username %></span>
+		<dl>
+			<dt><span>Carteira OAB:	</span> <%= user.portifolio_of_oab %></dt>
+			<dt><span>Cidade:				</span> <%= user.city.name %></dt>
+			<dt><span>Telefone:			</span> <%= user.phone %></dt>
+			<dt><span>E-mail:				</span> <%= user.email %></dt>
+			<dt><span>Índice:				</span> <%=number_with_precision(user.alik_rate/3, precision: 1)%></dt>
+		</dl>
+	</div>
+<% end %>
 
-<div id="profile">
-  <img alt="" src="http://graph.facebook.com/100001994980755/picture?type=square" width="50" class="avatar" /> <span class="name">Daniel Feio</span>
-  <dl>
-    <dt><span>Carteira OAB:</span> 14.446</dt>
-    <dt><span>Cidade:</span> Belem-Pa</dt>
-    <dt><span>Telefone:</span> 91 81177947</dt>
-    <dt><span>E-mail:</span> dfeio@hotmail.com</dt>
-    <dt><span>Índice:</span> 5,3 - Muito Bom</dt>
-  </dl>
-</div>
+
