--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
-<h1>Perfil do usuário - <%= @user.username %></h1>
+<h1><%= @user.username %></h1>
 
 <section class="user-profile">
 <%= render "shared/score_public" %>
