Add sidebar nas paginas

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,3 +1,6 @@
+<% content_for :sidebar do %>
+  <%= render("shared/sidebar") %>
+<% end %>
 <h1 class="devise"><%= t(".title") %></h1>
 
 <%=render "shared/score" %>
