--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,3 +1,7 @@
+<% content_for :sidebar do %>
+  <%= render("shared/sidebar") %>
+<% end %>
+
 <article>
 	<header class="question-show">
 		<span class="doctor">
