--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,3 +1,7 @@
+<% content_for :sidebar do %>
+  <%= render("shared/sidebar") %>
+<% end %>
+
 <h1 class="devise"><%= t(".title") %></h1>
 
 <%= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name), html: { class: "form-horizontal" }) do |f| %>
